# mcp-rule

./: README.md  pyproject.toml  setup.py
examples/: basic_usage.py  mcp_usage.py
mcp_rule/: __init__.py  cli.py  client.py  entrypoint.py  errors.py  mcp.py  models.py
tests/: test_client.py  test_mcp.py
