[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-rule"
version = "0.1.0"
description = "Model Context Protocol implementation for Rule.io API"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "MCP Rule Developer", email = "user@example.com"}
]
dependencies = [
    "mcp>=0.1.0",
    "httpx>=0.24.0",
    "pydantic>=2.0.0",
    "typing-extensions>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.0.0",
]

[project.scripts]
mcp-rule = "mcp_rule.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["mcp_rule"]
